--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,3 +2,16 @@
   text-align: center;
   background-color: #505050;
 }
+
+h1, h2, h3 {
+  padding: 0;
+  margin: 0;
+}
+
+h2 {
+  font-size: 1.25em;
+}
+
+button {
+  margin: 5px;
+}
