--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,6 +3,15 @@
   background-color: #505050;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 h1, h2, h3 {
   padding: 0;
   margin: 0;
