make groups page added, form validation written

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,4 +23,13 @@ h2 {
 
 button {
   margin: 5px;
+  cursor: pointer;
+}
+
+button > a:hover {
+  text-decoration: none;
+}
+
+textarea {
+  font-family: inherit;
 }
