--- a/src/routes/GroupsMadePage/GroupsMadePage.css
+++ b/src/routes/GroupsMadePage/GroupsMadePage.css
@@ -9,6 +9,56 @@
 .groups-made-page__group {
   margin: 10px;
   padding: 10px;
+  border: 1px solid gray;
+  background-color: lightgray;
+  min-width: 200px;
+}
+
+.groups-made-page__student {
+  background-color: whitesmoke;
+  border: 1px solid gray;
+  padding: 5px;
+  margin: 5px;
+}
+
+/* tooltip-specific styles */
+.groups-made-page__student {
+  position: relative;
+}
+
+.groups-made-page__tooltip > p {
+  margin: 0;
+}
+
+.groups-made-page__student .groups-made-page__tooltip {
+  font-size: 0.8em;
+  padding: 5px;
+  color: white;
+  background-color: black;
+  z-index: 1;
+  visibility: hidden;
+  position: absolute;
+  width: 180px;
+  top: 100%;
+  left: 50%;
+  /* half of width + padding * -1 to center */
+  margin-left: -95px;
+  border-radius: 5px;
+}
+
+.groups-made-page__student:hover .groups-made-page__tooltip {
+  visibility: visible;
+}
+
+.groups-made-page__student .groups-made-page__tooltip::after {
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent black transparent;
 }
 
 @media screen and (min-width: 700px) {
@@ -18,4 +68,5 @@
     flex-wrap: wrap;
     justify-content: center;
   }
+
 }
