--- a/src/routes/MakeGroupsPage/MakeGroupsPage.css
+++ b/src/routes/MakeGroupsPage/MakeGroupsPage.css
@@ -3,7 +3,7 @@
 }
 
 .make-groups-page__form--fieldset {
-  padding: 10px 20px;
+  padding: 10px;
   text-align: left;
   width: 220px;
   margin: 0 auto;
@@ -23,15 +23,26 @@
   width: 214px;
 }
 
-.make-groups-page__form--before-textarea {
-  height: 100px;
+.make-groups-page__form--explanation {
+  font-size: 0.8em;
+  color: #505050;
+  padding-bottom: 10px;
 }
 
-.make-groups-page__form--category-buttons {
+.make-groups-page__form--before-textarea {
+  height: 140px;
+}
+
+.make-groups-page__form--below-textarea {
+  height: 25px;
+}
+
+.make-groups-page__form--add-category-buttons {
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
 }
+
 
 .make-groups-page__form--category-buttons > button {
   width: 80px;
