--- a/src/routes/SavedGroupsPage/SavedGroupsPage.css
+++ b/src/routes/SavedGroupsPage/SavedGroupsPage.css
@@ -1,64 +1,69 @@
-.class-tab {
+.groups-made-page__class-tabs {
   list-style: none;
   display: flex;
   flex-direction: row;
   margin: 0;
 }
 
-.class-tab > li {
+.groups-made-page__class-tab {
   border: 1px solid black;
   border-radius: 10px 10px 0px 0px;
   padding: 8px;
   margin: 0px 5px;
 }
 
-.class__selected {
+.groups-made-page__class-tab > button {
+  border: transparent;
+  background-color: transparent;
+}
+
+.groups-made-page__class-tab--selected {
   background-color: gray;
 }
 
-.class__new {
+.groups-made-page__class-tab--new {
   background-color: silver;
 }
 
-.class-groupings {
-  border: 1px solid
+.groups-made-page__class-groupings {
+  border: 1px solid;
+  display: flex;
+  flex-direction: row;
 }
 
-.class-groupings {
- display: flex;
- flex-direction: row;
+.groups-made-page__groupings-list {
+  border: 1px solid black;
+  background-color: gainsboro;
+  flex-grow: 1;
 }
 
-.groupings-list {
-   border: 1px solid black;
-   background-color: gainsboro;
-   flex-grow: 1;
-}
-
-.groupings {
+.groups-made-page__groupings {
   border: 1px solid black;
   flex-grow: 5;
 }
 
-.groupings-list__ul {
+.groups-made-page__groupings-list--ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.groupings-list__ul > li {
+.groups-made-page__groupings-list--ul > li {
   margin: 5px;
+  border: 1px solid black;
 }
 
-.groupings-list__ul > li > button {
+.groups-made-page__groupings-list--ul > li > button {
   width: 70%;
+  border: transparent;
+  background-color: transparent;
 }
 
-.grouping__selected {
+.groups-made-page__groupings-list--selected {
   background-color: gray;
 }
 
-.grouping__new {
+.groups-made-page__groupings-list--new {
   background-color: silver;
 }
 
