--- a/src/routes/MakeGroupsPage/MakeGroupsPage.css
+++ b/src/routes/MakeGroupsPage/MakeGroupsPage.css
@@ -1,66 +1,91 @@
 .make-groups-page {
   background-color: gainsboro;
+  font-size: 0.8em;
+  box-sizing: border-box;
 }
 
-.make-groups-page__form--fieldset {
-  padding: 10px;
-  text-align: left;
-  width: 220px;
-  margin: 0 auto;
-}
-
+.make-groups-page__form--fieldset,
 .make-groups-page__form--grouping-characteristics {
-  width: 260px;
+  padding: 5px 20px;
+  width: 80%;
   margin: 0 auto;
-  text-align: center;
+}
+
+.make-groups-page__form--textarea {
+  width: 180px;
+}
+
+.make-groups-page__form--radio-buttons {
+  width: 180px;
+  margin: 0 auto;
+  text-align: left;
 }
 
 .make-groups-page__form--category-name {
   margin: 10px 0px;
 }
 
-.make-groups-page__form--textarea {
-  width: 214px;
-}
-
 .make-groups-page__form--explanation {
-  font-size: 0.8em;
+  font-size: 0.9em;
   color: #505050;
   padding-bottom: 10px;
 }
 
-.make-groups-page__form--before-textarea {
-  height: 140px;
-}
-
-.make-groups-page__form--below-textarea {
-  height: 25px;
+.make-groups-page__form--add-category-buttons > button {
+  width: 140px;
 }
 
 .make-groups-page__form--add-category-buttons {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 20px;
+  padding: 10px;
 }
 
+.make-groups-page__form--buttons {
+  padding: 10px;
+}
 
-.make-groups-page__form--category-buttons > button {
-  width: 80px;
+.make-groups-page__sampledata--buttons {
+  border-top: 1px solid black;
+  padding: 10px;
 }
 
 @media screen and (min-width: 800px) {
+  .make-groups-page {
+    font-size: 0.95em;
+  }
+  
   .make-groups-page__form--student-data {
     display: flex;
-    justify-content: center;
     align-items: flex-end;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .make-groups-page__form--fieldset,
+  .make-groups-page__form--grouping-characteristics {
+    padding: 5px 10px;
+    width: 260px;
   }
 
   .make-groups-page__form--fieldset {
-    margin: 20px;
+    margin: 5px;
   }
-}
 
-/* .make-groups-page__aliases {
-  position: relative;
-  bottom: -65px;
-} */
+  .make-groups-page__form--before-textarea {
+    height: 140px;
+  }
+
+  .make-groups-page__form--after-textarea {
+    height: 46px;
+  }
+
+  .make-groups-page__form--after-textarea > button {
+    width: 42%;
+  }
+
+  .make-groups-page__form--add-category-buttons {
+    width: 260px;
+    display: flex;
+    flex-direction: column;
+  }
+
+}
