--- a/src/routes/SavedGroupsPage/SavedGroupsPage.css
+++ b/src/routes/SavedGroupsPage/SavedGroupsPage.css
@@ -1,6 +1,8 @@
 .saved-groups-page {
-  padding: 10px 0px;
-  background-color: whitesmoke;
+  background: #F4976C;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #F4976C, #F8C089);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #F4976C, #F8C089); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  padding: 10px 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,35 +20,54 @@
 }
 
 .saved-groups-page__class-tab {
-  border: 1px solid black;
-  background-color: gainsboro;
+  /* border: 2px solid #b4dfe5; */
+  background-color: #b4dfe5;
   border-radius: 10px 10px 10px 10px;
   padding: 8px;
   margin: 5px 5px;
-  width: 130px;
+  /* width: 130px; */
 }
 
 .saved-groups-page__class-tab > button {
   border: transparent;
   background-color: transparent;
+  font-family: inherit;
+  font-weight: bold;
 }
 
 .saved-groups-page__class-tab--selected {
-  background-color: gray;
+  background-color: #303c6c;
+  /* border: 2px solid #303c6c; */
+}
+
+.saved-groups-page__class-tab--selected > button {
+  color: white;
 }
 
 .saved-groups-page__class-tab--new {
-  background-color: white;
+  background-color: #d2fdff;
+  /* border: 2px solid transparent; */
 }
+/* 
+.saved-groups-page__class-tab--new > button {
+  font-weight: bold;
+} */
 
 .saved-groups-page__class-groupings {
-  border: 2px solid black;
+  background-color: white;
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  margin-bottom: 20px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
 }
 
 .saved-groups-page__groupings-list {
-  background-color: lightgray;
+  margin: 10px 0px;
+  padding: 10px;
+  border-right: 2px solid #303c6c;
 }
 
 .saved-groups-page__groupings {
@@ -63,23 +84,53 @@
   justify-content: center;
 }
 
-.saved-groups-page__groupings-list--selected {
-  background-color: gray;
+.saved-groups-page__groupings-list--new {
+  background-color: #d2fdff;
+  border: 2px solid transparent;
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
 }
 
-.saved-groups-page__groupings-list--new {
-  background-color: white;
-}
+/* .saved-groups-page__groupings-list--new > button {
+  color: white;
+  font-weight: bold;
+} */
 
 .saved-groups-page__groupings-list--ul > li > button {
   border: transparent;
   background-color: transparent;
+  font-family: inherit;
 }
 
 .saved-groups-page__groupings-list--ul > li {
   margin: 5px;
-  border: 1px solid black;
   width: 110px;
+  border-radius: 5px;
+}
+
+.saved-groups-page__groupings-list--ul > li > button {
+  font-weight: bold;
+}
+
+.saved-groups-page__groupings-list--selected {
+  background-color: #b4dfe5;
+  border: 2px solid transparent;
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+}
+
+.saved-groups-page__groupings-list--unselected {
+  background-color: #303c6c;
+  /* border: 2px solid #ef7e19; */
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+}
+
+.saved-groups-page__groupings-list--unselected > button {
+  color: white;
 }
 
 .saved-groups-page__groupings {
@@ -92,17 +143,28 @@
 .saved-groups-page__group {
   margin: 10px;
   padding: 10px;
-  border: 1px solid gray;
-  background-color: lightgray;
+  border-radius: 5px;
+  background-color: #ffffff;
+  border: 3px solid #303C6C;
+  font-weight: bold;
   min-width: 120px;
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
 }
 
 .saved-groups-page__student {
-  background-color: whitesmoke;
-  border: 1px solid gray;
+  background-color: #46579B;
+  border-radius: 5px;
+  /* border: 1px solid #46579B; */
+  color: white;
+  font-weight: normal;
   padding: 5px;
   margin: 5px;
   cursor: grab;
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
 }
 
 /* tooltip-specific styles */
@@ -143,6 +205,50 @@
   border-width: 5px;
   border-style: solid;
   border-color: transparent transparent black transparent;
+}
+
+.saved-groups-page__groups > h1 {
+  padding: 10px;
+  margin: 0;
+}
+
+.saved-groups-page__class--buttons {
+  text-align: right;
+  position: relative;
+  top: -40px;
+}
+
+.saved-groups-page__class--buttons > button {
+  font-size: 11px;
+  color: #303c6c;
+  background-color: transparent;
+  border: none;
+  width: 100px;
+  text-align: right;
+}
+
+.saved-groups-page__main--buttons {
+  text-align: right;
+  padding: 15px;
+}
+
+.saved-groups-page__main--buttons > button {
+  font-size: 11px;
+  color: #303c6c;
+  background-color: transparent;
+  border: none;
+  width: 100px;
+  text-align: right;
+
+}
+
+.saved-groups-page__button--container {
+  display: flex;
+}
+
+.saved-groups-page__button--icon {
+  font-size: 22px;
+  padding-left: 5px;
 }
 
 .saved-groups-page__show {
