--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,9 +1,11 @@
 .nav-bar {
-  background: #F4976C;
+  background: #3F4F8D;
   padding: 10px 10px;
   font-weight: bold;
   display: flex;
   justify-content: flex-end;
+  color: white;
+  transition: 0.2s ease-out;
 }
 
 .nav-bar > a {
@@ -12,5 +14,7 @@
 }
 
 .nav-bar > a:hover {
-  text-decoration: underline;
+  /* text-decoration: underline; */
+  color: #FBE8A6;
+  transition: 0.2s ease-in;
 }
