--- a/src/routes/SavedGroupsPage/SavedGroupsPage.css
+++ b/src/routes/SavedGroupsPage/SavedGroupsPage.css
@@ -1,7 +1,8 @@
 .saved-groups-page {
-  background: #F4976C;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #F4976C, #F8C089);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #F4976C, #F8C089); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #E2E4F3;
+  /* -webkit-box-shadow: inset 0px 5px 5px 0px rgba(63,79,141,1);
+  -moz-box-shadow: inset 0px 5px 5px 0px rgba(63,79,141,1);
+  box-shadow: inset 0px 5px 5px 0px rgba(63,79,141,1); */
   padding: 10px 10px;
   display: flex;
   flex-direction: column;
@@ -20,12 +21,13 @@
 }
 
 .saved-groups-page__class-tab {
-  /* border: 2px solid #b4dfe5; */
-  background-color: #b4dfe5;
+  border: 2px solid lightgray;
+  border-bottom: transparent;
+  background-color: gainsboro;
   border-radius: 10px 10px 10px 10px;
   padding: 8px;
   margin: 5px 5px;
-  /* width: 130px; */
+  transition: 0.2s ease-out;
 }
 
 .saved-groups-page__class-tab > button {
@@ -33,19 +35,23 @@
   background-color: transparent;
   font-family: inherit;
   font-weight: bold;
+  color: #606060;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 0.7em;
 }
 
 .saved-groups-page__class-tab--selected {
-  background-color: #303c6c;
-  /* border: 2px solid #303c6c; */
+  background-color: #FF9A5C;
 }
 
-.saved-groups-page__class-tab--selected > button {
-  color: white;
+.saved-groups-page__class-tab:hover {
+  background-color: #FBE8A6;
+  transition: 0.2s ease-in;
 }
 
 .saved-groups-page__class-tab--new {
-  background-color: #d2fdff;
+  background-color: whitesmoke;
   /* border: 2px solid transparent; */
 }
 /* 
@@ -54,20 +60,23 @@
 } */
 
 .saved-groups-page__class-groupings {
-  background-color: white;
-  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  background-color: whitesmoke;
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(211,211,211,1);
+  -moz-box-shadow: 1px 1px 3px 0px rgba(211,211,211,1);
+  box-shadow: 1px 1px 3px 0px rgba(211,211,211,1);
   margin-bottom: 20px;
-  border-radius: 10px;
+  border-radius: 0px 0px 10px 10px;
+  border-top: 3px solid #FF9A5C;
   display: flex;
   flex-direction: column;
 }
 
 .saved-groups-page__groupings-list {
-  margin: 10px 0px;
+  /* margin: 10px 0px; */
   padding: 10px;
-  border-right: 2px solid #303c6c;
+  /* border-right: 2px solid #FF9A5C; */
+  background-color: #e8e8e8;
+  border-radius: 0px 0px 0px 10px;
 }
 
 .saved-groups-page__groupings {
@@ -85,11 +94,8 @@
 }
 
 .saved-groups-page__groupings-list--new {
-  background-color: #d2fdff;
-  border: 2px solid transparent;
-  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  background-color: whitesmoke;
+  border: 2px solid lightgray;
 }
 
 /* .saved-groups-page__groupings-list--new > button {
@@ -107,30 +113,30 @@
   margin: 5px;
   width: 110px;
   border-radius: 5px;
+  transition: 0.2s ease-out;
+}
+
+.saved-groups-page__groupings-list--ul > li:hover {
+  background-color: #FBE8A6;
+  transition: 0.2s ease-in;
 }
 
 .saved-groups-page__groupings-list--ul > li > button {
   font-weight: bold;
+  color: #606060;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 0.7em;
 }
 
 .saved-groups-page__groupings-list--selected {
-  background-color: #b4dfe5;
-  border: 2px solid transparent;
-  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
+  background-color: #FF9A5C;
+  border: 2px solid lightgray;
 }
 
 .saved-groups-page__groupings-list--unselected {
-  background-color: #303c6c;
-  /* border: 2px solid #ef7e19; */
-  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-}
-
-.saved-groups-page__groupings-list--unselected > button {
-  color: white;
+  background-color: gainsboro;
+  border: 2px solid lightgray;
 }
 
 .saved-groups-page__groupings {
@@ -144,27 +150,22 @@
   margin: 10px;
   padding: 10px;
   border-radius: 5px;
-  background-color: #ffffff;
-  border: 3px solid #303C6C;
+  background-color: gainsboro;
+  border: 3px solid lightgray;
   font-weight: bold;
+  color: #3d3d3d;
   min-width: 120px;
-  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
 }
 
 .saved-groups-page__student {
-  background-color: #46579B;
+  background-color: whitesmoke;
   border-radius: 5px;
   /* border: 1px solid #46579B; */
-  color: white;
+  color: #3d3d3d;
   font-weight: normal;
   padding: 5px;
   margin: 5px;
   cursor: grab;
-  -webkit-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  -moz-box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
-  box-shadow: 1px 1px 3px 0px rgba(128,128,128,1);
 }
 
 /* tooltip-specific styles */
@@ -210,17 +211,23 @@
 .saved-groups-page__groups > h1 {
   padding: 10px;
   margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #606060;
 }
 
 .saved-groups-page__class--buttons {
   text-align: right;
   position: relative;
   top: -40px;
+  height: 0px;
 }
 
 .saved-groups-page__class--buttons > button {
+  font-family: inherit;
+  line-height: 100%;
   font-size: 11px;
-  color: #303c6c;
+  color: #3F4F8D;
   background-color: transparent;
   border: none;
   width: 100px;
@@ -233,8 +240,10 @@
 }
 
 .saved-groups-page__main--buttons > button {
+  font-family: inherit;
+  line-height: 100%;
   font-size: 11px;
-  color: #303c6c;
+  color: #3F4F8D;
   background-color: transparent;
   border: none;
   width: 100px;
@@ -251,6 +260,16 @@
   padding-left: 5px;
 }
 
+.saved-groups-page__grouping-heading > h2 {
+  color: #3d3d3d;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.saved-groups-page__grouping-heading {
+  color: #606060;
+}
+
 .saved-groups-page__show {
   display: block;
 }
@@ -263,7 +282,7 @@
   .saved-groups-page__class-tabs {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
   
   .saved-groups-page__class-tab {
