--- a/src/routes/GroupsMadePage/GroupsMadePage.css
+++ b/src/routes/GroupsMadePage/GroupsMadePage.css
@@ -1,9 +1,29 @@
 .groups-made-page {
-  background-color: gainsboro;
+  background-color: #E2E4F3;
   display: flex;
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
+}
+
+.groups-made-page__body-container {
+  background-color: whitesmoke;
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(211,211,211,1);
+  -moz-box-shadow: 1px 1px 3px 0px rgba(211,211,211,1);
+  box-shadow: 1px 1px 3px 0px rgba(211,211,211,1);
+  margin: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  border: 3px solid #FF9A5C;
+}
+
+.groups-made-page__body-container {
+  color: #3d3d3d;
+}
+
+.groups-made-page__body-container > h1 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .groups-made-page__groupings {
@@ -16,17 +36,48 @@
 .groups-made-page__group {
   margin: 10px;
   padding: 10px;
-  border: 1px solid gray;
-  background-color: lightgray;
-  min-width: 200px;
+  border-radius: 5px;
+  background-color: gainsboro;
+  border: 3px solid lightgray;
+  font-weight: bold;
+  color: #3d3d3d;
+  min-width: 120px;
 }
 
 .groups-made-page__student {
   background-color: whitesmoke;
-  border: 1px solid gray;
+  border-radius: 5px;
+  color: #3d3d3d;
+  font-weight: normal;
   padding: 5px;
   margin: 5px;
   cursor: grab;
+}
+
+.groups-made-page__main--buttons {
+  text-align: right;
+  padding: 15px;
+}
+
+.groups-made-page__main--buttons > button {
+  font-family: inherit;
+  line-height: 100%;
+  font-size: 11px;
+  color: #3F4F8D;
+  background-color: transparent;
+  border: none;
+  width: 100px;
+  text-align: right;
+}
+
+.groups-made-page__button--container {
+  display: flex;
+  align-items: center;
+}
+
+.groups-made-page__button--icon {
+  font-size: 22px;
+  padding-left: 5px;
 }
 
 /* tooltip-specific styles */
