--- a/src/routes/GroupsMadePage/GroupsMadePage.css
+++ b/src/routes/GroupsMadePage/GroupsMadePage.css
@@ -47,6 +47,7 @@
 .groups-made-page__student {
   background-color: whitesmoke;
   border-radius: 5px;
+  border: 1px solid lightgray;
   color: #3d3d3d;
   font-weight: normal;
   padding: 5px;
