--- a/src/routes/SavedGroupsPage/SavedGroupsPage.css
+++ b/src/routes/SavedGroupsPage/SavedGroupsPage.css
@@ -145,6 +145,7 @@
 .saved-groups-page__student {
   background-color: whitesmoke;
   border-radius: 5px;
+  border: 1px solid lightgray;
   color: #3d3d3d;
   font-weight: normal;
   padding: 5px;
