--- a/src/routes/SavedGroupsPage/SavedGroupsPage.css
+++ b/src/routes/SavedGroupsPage/SavedGroupsPage.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 100vh;
+  min-height: calc(100vh - 65px);
 }
 
 .saved-groups-page__class-tabs {
