--- a/src/routes/LoginPage/LoginPage.css
+++ b/src/routes/LoginPage/LoginPage.css
@@ -1,9 +1,14 @@
 .login-page {
-  height: 100vh;
+  height: calc(100vh - 127px - 20vh);
+  background-color: #E2E4F3;
+  padding: 20vh 20vw 0vh 20vw;
 }
 
-.login-page > h2 {
-  margin-top: 60px;
+.login-page__main {
+  border: 3px solid #FF9A5C;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: whitesmoke;
 }
 
 .login-page__password > label,
