--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,6 +2,7 @@
   background: #3F4F8D;
   padding: 10px 10px;
   font-weight: bold;
+  font-size: 0.85em;
   display: flex;
   justify-content: flex-end;
   color: white;
@@ -18,4 +19,10 @@
   /* text-decoration: underline; */
   color: #FBE8A6;
   transition: 0.2s ease-in;
+}
+
+@media screen and (min-width: 800px) {
+  .nav-bar {
+    font-size: 1em;
+  }
 }
