--- a/src/components/UserOnboarding/UserOnboarding.css
+++ b/src/components/UserOnboarding/UserOnboarding.css
@@ -7,7 +7,7 @@
 }
 
 .user-onboarding__intro > h3 {
-  font-size: 3em;
+  font-size: 2.2em;
   position: relative;
   color: white;
   top: 40%;
@@ -58,6 +58,7 @@
   border-radius: 30px;
   padding: 8px 20px;
   margin: 0px 20px;
+  margin-bottom: 10px;
   transition: 0.2s ease-out;
 }
 
@@ -69,21 +70,13 @@
 
 .user-onboarding__flex-child--left,
 .user-onboarding__flex-child--right {
-  padding: 60px;
+  padding: 30px;
 }
 
 .user-onboarding__flex-child--left > h3,
 .user-onboarding__flex-child--right > h3 {
   font-size: 1.8em;
-  color: white;
-}
-
-.user-onboarding__flex-child--left {
-  margin-left: 30px;
-}
-
-.user-onboarding__flex-child--right {
-  margin-right: 30px;
+  color: #FBE8A6;
 }
 
 .user-onboarding__flex-child--left > p,
@@ -93,6 +86,10 @@
 }
 
 @media screen and (min-width: 800px) {
+  .user-onboarding__intro > h3 {
+    font-size: 3em;
+  }
+
   .user-onboarding__data-entry {
     flex-direction: row;
   }
@@ -102,15 +99,25 @@
   }
 
   .user-onboarding__text {
-    background-image: 
-    linear-gradient(
-      rgba(74,0,224,0.4),
-      rgba(74,0,224,0.4)
-    );
+    background-color: #4A00E0;
+    border-radius: 10px;
   }
 
   .user-onboarding__saved-groups--img,
   .user-onboarding__data-entry--img  {
     width: 40vw;
+  }
+
+  .user-onboarding__flex-child--left {
+    margin-left: 30px;
+  }
+  
+  .user-onboarding__flex-child--right {
+    margin-right: 30px;
+  }
+
+  .user-onboarding__flex-child--left,
+  .user-onboarding__flex-child--right {
+  padding: 60px;
   }
 }
