--- a/src/routes/GroupsMadePage/GroupsMadePage.css
+++ b/src/routes/GroupsMadePage/GroupsMadePage.css
@@ -27,7 +27,7 @@
 }
 
 .groups-made-page__groupings {
-  margin: 0px 40px;
+  margin: 0px 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -41,7 +41,7 @@
   border: 3px solid lightgray;
   font-weight: bold;
   color: #3d3d3d;
-  min-width: 120px;
+  width: 32%;
 }
 
 .groups-made-page__student {
@@ -67,7 +67,7 @@
   color: #3F4F8D;
   background-color: transparent;
   border: none;
-  width: 100px;
+  width: 70px;
   text-align: right;
 }
 
@@ -120,3 +120,14 @@
   border-style: solid;
   border-color: transparent transparent black transparent;
 }
+
+@media screen and (min-width: 800px) {
+  .groups-made-page__main--buttons > button {
+    width: 100px;
+  }
+
+  .groups-made-page__group {
+    width: 120px;
+  }
+}
+
