--- a/src/routes/MakeGroupsPage/MakeGroupsPage.css
+++ b/src/routes/MakeGroupsPage/MakeGroupsPage.css
@@ -96,6 +96,10 @@
   padding-left: 5px;
 }
 
+.make-groups-page__button--generate-groups > * {
+  font-weight: bold;
+}
+
 @media screen and (min-width: 800px) {
   .make-groups-page {
     font-size: 0.95em;
