added line numbers to textareas

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -37,6 +37,17 @@ textarea {
   border: 1px solid silver;
 }
 
+/* makes the line numbers appear */
+textarea {
+  background: url(http://i.imgur.com/2cOaJ.png);
+  background-attachment: local;
+  background-repeat: no-repeat;
+  padding-left: 35px;
+  padding-top: 12px;
+  border-color:#ccc;
+  line-height:16px;
+}
+
 input {
   font-family: inherit;
   border: 1px solid silver;
