--- a/src/routes/SavedGroupsPage/SavedGroupsPage.css
+++ b/src/routes/SavedGroupsPage/SavedGroupsPage.css
@@ -276,6 +276,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    margin: 0px 30px;
   }
   
   .saved-groups-page__class-tab {
@@ -290,6 +291,7 @@
 
   .saved-groups-page__class-groupings {
     flex-direction: row;
+    margin: 0px 30px 20px 30px;
   }
   
   .saved-groups-page__groupings-list {
