changed imgur link to https

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -39,7 +39,7 @@ textarea {
 
 /* makes the line numbers appear */
 textarea {
-  background: url(http://i.imgur.com/2cOaJ.png);
+  background: url(https://i.imgur.com/2cOaJ.png);
   background-attachment: local;
   background-repeat: no-repeat;
   padding-left: 35px;
