adjusted class name so that name and icons are not overlapping

--- a/src/routes/SavedGroupsPage/SavedGroupsPage.css
+++ b/src/routes/SavedGroupsPage/SavedGroupsPage.css
@@ -195,7 +195,7 @@
 }
 
 .saved-groups-page__groups > h1 {
-  padding: 10px;
+  padding: 10px 210px;
   margin: 0;
   text-transform: uppercase;
   letter-spacing: 1px;
