--- a/src/components/Modals/Modals.css
+++ b/src/components/Modals/Modals.css
@@ -45,6 +45,35 @@
   font-size: 16px;
 }
 
+.modal__buttons > button {
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  border-radius: 30px;
+  padding: 2px 8px;
+  margin: 5px 3px;
+  margin-bottom: 10px;
+}
+
+.modal__buttons > button:hover {
+  background-color: #FBE8A6;
+  color: #2C3763;
+  transition: 0.2s ease-in;
+}
+
+.modal__buttons--outline {
+  background-color: transparent;
+  color: #2C3763;
+  border: 2px solid #2C3763;
+}
+
+.modal__buttons--fill {
+  background-color: #4A00E0;
+  color: #FBE8A6;
+  border: 2px solid #4A00E0;
+}
+
 @media screen and (min-width: 800px) {
   .modal__main {
     width: 400px;
