--- a/src/routes/MakeGroupsPage/MakeGroupsPage.css
+++ b/src/routes/MakeGroupsPage/MakeGroupsPage.css
@@ -51,12 +51,35 @@
   padding-bottom: 10px;
 }
 
+/* intended to replace 
+make-groups-page__form--buttons, 
+make-groups-page__sampledata--buttons, and 
+make-groups-page--after-textarea */
+.make-groups-page__button-group {
+  padding: 10px;
+  text-align: right;
+  padding: 15px;
+}
+
+.make-groups-page__button-group > button {
+  font-family: inherit;
+  line-height: 100%;
+  font-size: 11px;
+  color: #3F4F8D;
+  background-color: transparent;
+  border: none;
+  width: 100px;
+  text-align: right;
+}
+
+/* remove these when done refactoring */
+
 .make-groups-page__form--buttons {
   padding: 10px;
 }
 
 .make-groups-page__sampledata--buttons {
-  border-top: 1px solid #3F4F8D;
+  /* border-top: 1px solid #3F4F8D; */
   padding: 10px;
 }
 
@@ -80,6 +103,8 @@
   text-align: right;
 }
 
+/* end of remove when refactoring */
+
 .make-groups-page__form--after-textarea,
 .make-groups-page__form--after-textarea > button {
   text-align: center;
@@ -90,13 +115,15 @@
   align-items: center;
 }
 
-.make-groups-page__button--icon {
+.make-groups-page__button--icon-container svg,
+.make-groups-page__button--icon-container span {
   font-weight: bold;
   font-size: 22px;
   padding-left: 5px;
 }
 
-.make-groups-page__button--generate-groups > * {
+/* this is a utility class and should be moved away eventually */
+.bold {
   font-weight: bold;
 }
 
